--- a/src/components/css/_hero.scss
+++ b/src/components/css/_hero.scss
@@ -1,10 +1,14 @@
 .Hero {
     background-color: $dark-teal;
-    padding: 1em .5em 5em 10em;
+    padding: 4em .5em 5em 10em;
+    display: flex;
+    flex-direction: row;
+    align-items: top;
+    height: 100vh;
     h1 {
         color: $pink;
         font-family: $main-typeface, sans-serif;
-        font-size: 6em;
+        font-size: 7em;
         font-style: normal;
         font-weight: 700;
         line-height: .9em; /* 93.966% */
@@ -18,13 +22,14 @@
     h2 {
         color: $white;
         font-family: $main-typeface, sans-serif;
-        font-size: 1.67rem;
+        font-size: 1.95rem;
         font-style: normal;
         font-weight: 600;
         line-height: 36px; /* 109.091% */
         letter-spacing: 0.66px;
         text-transform: uppercase;
     }
+
 
     button {
         background-color: transparent;
@@ -45,10 +50,19 @@
         font-weight: 400;
         font-size: 1.25em;
         margin-top: 1.5em;
-        span {
-            margin: 0em 0em 0em .5em;
-            position: relative;
-            height: auto;
+        a {
+            width: fit-content;
+            color: $white;
+            text-decoration: none;
+            span {
+                margin: 0em 0em 0em .5em;
+                position: relative;
+                height: auto;
+            }
+        }
+
+        a:visited {
+            text-decoration: none;
         }
     }
 
@@ -62,5 +76,15 @@
     .hero-main-content {
         display: flex;
         flex-direction: column;
+    }
+
+    .hero-image {
+        padding: 3em;
+        img {
+            position: absolute;
+            right: 0;
+            height: 75%;
+            width: auto;
+        }
     }
 }
