--- a/src/components/css/_nav.scss
+++ b/src/components/css/_nav.scss
@@ -7,18 +7,25 @@
     align-items: center;
     text-align: center;
     width: 100vw;
-    justify-content: space-evenly;
-    border-bottom: 2px solid $pink;
+    justify-content: space-between;
     font-family: 'Proxima Nova Rg', sans-serif;
-    a {
-        color: $white;
-        text-decoration: none;
-        padding: 1em 3em;
-    } 
-    
-    .active {
-        background-color: $pink;
-        color: black;
-        font-weight: 800;
+    font-size: 1em;
+    border-bottom: 1px solid $pink;
+    .nav-container {
+        margin: 0 auto;
+        padding: .75em;
+        a {
+            color: $white;
+            text-decoration: none;
+            padding: .75em 2.75em;
+            margin-left: 2.55em;
+            margin-right: 2.55em;
+        } 
+        
+        .active {
+            background-color: $pink;
+            color: black;
+            font-weight: 800;
+        }
     }
 }
