Add accordian functionality to faq content

--- a/src/components/css/_nav.scss
+++ b/src/components/css/_nav.scss
@@ -1,5 +1,7 @@
 .Nav {
-    background-color: transparent;
+    background-color: rgb(0, 0, 0, .2);
+    backdrop-filter: blur(1em);
+    z-index: 5;
     position: fixed;
     color: $white;
     flex-direction: row;
