--- a/src/components/css/_singleFaq.scss
+++ b/src/components/css/_singleFaq.scss
@@ -2,6 +2,7 @@
     h4 {
         border-bottom: 1px solid $pink;
         padding-bottom: .25em;
+        margin-top: 1em;
         margin-bottom: 0em;
         display: flex;
         justify-content: space-between;
@@ -39,11 +40,12 @@
     color: $white;
     .faq-question {
         text-transform: uppercase;
-        border-bottom: 1px solid $light-purple;
-        padding: 1em 0em 1em 0em;
+        padding: 1em 0em .5em 0em;
         display: flex;
         justify-content: space-between;
         align-items: center;
+        margin-bottom: 0em;
+        font-size: 1.25em;
         button {
             padding-right: .3em;
             background-color: transparent;
@@ -60,5 +62,19 @@
         button:hover {
             cursor: pointer;
         }
+    }
+
+    .faq-question-hidden {
+        display: none;
+    }
+    .faq-answer {
+        border-bottom: 1px solid $light-purple;
+        margin: 0;
+        padding-bottom: 1em;
+        font-weight: 200;
+        font-size: 1em
+    }
+    .faq-answer-hidden {
+        display: none;
     }
 }
