Add basic foundational styling for each content area

--- a/src/components/css/_faqs.scss
+++ b/src/components/css/_faqs.scss
@@ -1,10 +1,11 @@
 .FAQs {
-    height: 100vh;
+    height: fit-content;
     display: flex;
     flex-direction: row;
     background-color: $purple;
     color: $white;
     padding-top: 1.5em;
+    padding-bottom: 10em;
     .faq-header-and-image {
         width: 25%;
         display: flex;
