--- a/src/components/css/_variables.scss
+++ b/src/components/css/_variables.scss
@@ -4,6 +4,7 @@ $white: #FFFFFF;
 $pink: #EAB0C1;
 $black: #000000;
 $dark-teal: #0D4248;
+$peach: #FFF5EF;
 
 $main-typeface: 'Oswald';
 $secondary-typeface: 'Proxima Nova';
