Add minor changes to hero and singleFaq

--- a/src/components/css/_quote.scss
+++ b/src/components/css/_quote.scss
@@ -2,4 +2,10 @@
     height: 50vh;
     background-color: $pink;
     color: $purple;
+    span {
+        font-size: 15em;
+    }
+    .quote-content {
+        font-size: 3em;
+    }
 }
