Add css styling notes for quote component

--- a/src/components/css/_quote.scss
+++ b/src/components/css/_quote.scss
@@ -9,3 +9,15 @@
         font-size: 3em;
     }
 }
+
+/*
+TO-DO:
+- display flex
+- direction column
+- first child text align start/left
+- main-quote div centered
+- last child text align end/right
+
+- rotate first child (open-quotation) 180 degrees
+- increase font-size of first and last child
+*/
