Style quotes component

--- a/src/components/css/_variables.scss
+++ b/src/components/css/_variables.scss
@@ -7,4 +7,4 @@ $dark-teal: #0D4248;
 $peach: #FFF5EF;
 
 $main-typeface: 'Oswald';
-$secondary-typeface: 'Proxima Nova';
+$secondary-typeface: 'Proxima Nova Rg';
