--- a/src/components/css/_nav.scss
+++ b/src/components/css/_nav.scss
@@ -10,7 +10,7 @@
     text-align: center;
     width: 100vw;
     justify-content: space-between;
-    font-family: 'Proxima Nova Rg', sans-serif;
+    font-family: $secondary-typeface, sans-serif;
     font-size: 1em;
     border-bottom: 1px solid $pink;
     .nav-container {
