--- a/src/components/css/_resources.scss
+++ b/src/components/css/_resources.scss
@@ -1,7 +1,7 @@
 .Resources {
     height: fit-content;
     background-color: $peach;
-    padding-bottom: 10em;
+    padding: 5.5em .5em 0em 13em;
     color: $dark-teal;
 }
 
