--- a/src/components/css/_hero.scss
+++ b/src/components/css/_hero.scss
@@ -1,14 +1,14 @@
 .Hero {
     background-color: $dark-teal;
-    padding: 5.5em .5em 0em 10em;
+    padding: 5.5em .5em 3em 13em;
     display: flex;
     flex-direction: row;
     align-items: top;
-    height: 100vh;
+    height: 85vh;
     h1 {
         color: $pink;
         font-family: $main-typeface, sans-serif;
-        font-size: 6.75em;
+        font-size: 8em;
         font-style: normal;
         font-weight: 700;
         line-height: .9em; /* 93.966% */
@@ -76,10 +76,11 @@
     .hero-main-content {
         display: flex;
         flex-direction: column;
+        
     }
 
     .hero-image {
-        padding: 3em;
+        padding-top: 3em;
         img {
             position: absolute;
             right: 0;
