--- a/src/components/css/_nav.scss
+++ b/src/components/css/_nav.scss
@@ -1,6 +1,6 @@
 .Nav {
-    background-color: rgb(0, 0, 0, .2);
-    backdrop-filter: blur(1em);
+    // background-color: rgb(0, 0, 0, .2);
+    // backdrop-filter: blur(1em);
     z-index: 5;
     position: fixed;
     color: $white;
@@ -26,8 +26,52 @@
         
         .active {
             background-color: $pink;
-            color: black;
+            color: $black;
             font-weight: 800;
         }
+    }
+}
+
+.nav-purple {
+    background-color: $purple;
+}
+
+.nav-light-purple {
+    background-color: $light-purple;
+}
+
+.nav-white {
+    background-color: $white;
+}
+
+.nav-pink {
+    background-color: $pink;
+    border-bottom: 1px solid $purple;
+    .active {
+        background-color: $peach !important;
+    }
+    a {
+        color: $black !important;
+        
+    }
+}
+
+.nav-black {
+    background-color: $black;
+}
+
+.nav-dark-teal {
+    background-color: $dark-teal;
+}
+
+.nav-peach {
+    background-color: $peach;
+    .active {
+        background-color: $dark-teal !important;
+        color: $peach !important;
+    }   
+    a {
+        color: $dark-teal !important;
+        
     }
 }
