--- a/src/components/css/_singleFaq.scss
+++ b/src/components/css/_singleFaq.scss
@@ -32,6 +32,10 @@
             }
          }
     }
+
+    h4:hover {
+        cursor: pointer;
+    }
 }
 
 .faq-topic {
@@ -72,6 +76,10 @@
             }
         }
 
+        .faq-question:hover {
+            cursor: pointer;
+        }
+
         .faq-q-and-a-hidden {
             transition: all 300ms ease-in-out;
             max-height: 0;
@@ -85,9 +93,7 @@
         .faq-answer {
             margin: 0;
             padding-bottom: 1em;
-            font-weight: 100;
             font-size: .85em;
-            letter-spacing: .85px;
             animation: fadeIn 400ms ease-in both;
             overflow: hidden;
             font-family: $secondary-typeface, sans-serif;
