Minor h1 hero fix

--- a/src/components/css/_hero.scss
+++ b/src/components/css/_hero.scss
@@ -11,7 +11,7 @@
         font-size: 8em;
         font-style: normal;
         font-weight: 700;
-        line-height: 1em; /* 93.966% */
+        line-height: 1em;
         letter-spacing: -.01em;
         text-transform: uppercase;
         padding-bottom: 0;
