--- a/src/components/css/_quote.scss
+++ b/src/components/css/_quote.scss
@@ -1,11 +1,11 @@
 .Quote {
-    height: 58vh;
+    height: 100vh;
     background-color: $pink;
     color: $purple;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding: 1em 0 5em 0;
+    padding-top: 10em;
     .open-and-quote {
         display: flex;
         flex-direction: row;
