--- a/src/components/css/_resources.scss
+++ b/src/components/css/_resources.scss
@@ -14,7 +14,7 @@
         letter-spacing: -.01em;
         text-transform: uppercase;
         padding-bottom: 0;
-        margin-bottom: .3em;
+        margin-bottom: -.15em;
         text-align: left;
     }
     h4 {
@@ -40,7 +40,7 @@
     img {
         position: absolute;
         right: 0;
-        margin-top: -173px;
+        margin-top: -167px;
     }
 }
 
