--- a/src/components/css/_singleResource.scss
+++ b/src/components/css/_singleResource.scss
@@ -8,8 +8,8 @@
         width: 25em;
         background-color: $white;
         border: 2px solid $dark-teal;
-        padding:  1.75em 1em 9.5em 2em;
-        margin: 1.5em 0 1.5em 0;
+        padding:  1.5em 2em 1.5em 2em;
+        margin: .5em 0 3.5em 0;
         border-radius: .85em;
         text-align: left;
         box-shadow: 8px 8px 0px 0px $dark-teal;
